@@ -73,3 +73,6 @@ db_type = postgresql
 # Enable psyco module
 # Need to have psyco installed http://psyco.sourceforge.net/
 #psyco = False
+
+# Enable auto-reload of modules if changed
+#auto_reload = True
